Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CharizardtheFireMage/github.io">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/CharizardtheFireMage/vg">View on GitHub</a>
 
           <h1 id="project_title">Other Metas Voice Guide</h1>
           <h2 id="project_tagline">Congratulations on being promoted to room voice! (Or you found this link and decided to read it.) So this is the guide of how to be a good voice in Other Metas.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/CharizardtheFireMage/github.io/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/CharizardtheFireMage/github.io/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/CharizardtheFireMage/vg/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/CharizardtheFireMage/vg/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,17 +31,21 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>First, let's talk about the rules that apply to all official rooms.</p>
+        <h3>
+<a id="rules-applied-towards-being-voiced-in-official-rooms" class="anchor" href="#rules-applied-towards-being-voiced-in-official-rooms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rules applied towards being voiced in Official Rooms</h3>
 
-<p>1) Do not be rude to other users. Just because you are in power doesn't mean that you can treat others differently then when you were a regular user.
-2) Do not ask for rank IN ANY WAY, or else it will take a long time for you to get the rank. Yes we know when you are trying to "suck up" to staff, especially the senior staff of the room. We take note of it amongst ourselves. Bottom line: Don't suggest anything about having more power.
-3) Don't start a tour that isn't related to the official room itself. NOTE: This does NOT mean you shouldn't start a tour after no one has been voting. Just don't start a tour that shouldn't be played in this room such as OU..
-4) We know you are just voices, but try to help all users with any questions they have. If you do not know the answer, it's not the end of the world. Just redirect them to a staff member (preferably the higher the better), who does not have an /away next to their name.
-5) Please remember the tour clause, which states you may play every tier twice and then it is void, except for 1v1 and C&amp;E. 1v1 and C&amp;E can be played once, then it is void for the next 2 tours. If you have questions, ask a staff about it and they will assist you. Use /poll void tier,tier as well.</p>
+<ol>
+<li>Do not be rude to other users. Just because you are in power doesn't mean that you can treat others differently then when you were a regular user.</li>
+<li>Do not ask for rank IN ANY WAY, or else it will take a long time for you to get the rank. Yes we know when you are trying to "suck up" to staff, especially the senior staff of the room. We take note of it amongst ourselves. Bottom line: Don't suggest anything about having more power.</li>
+<li>Don't start a tour that isn't related to the official room itself. NOTE: This does NOT mean you shouldn't start a tour after no one has been voting. Just don't start a tour that shouldn't be played in this room such as OU..</li>
+<li>We know you are just voices, but try to help all users with any questions they have. If you do not know the answer, it's not the end of the world. Just redirect them to a staff member (preferably the higher the better), who does not have an /away next to their name.</li>
+<li>Please remember the tour clause, which states you may play every tier twice and then it is void, except for 1v1 and C&amp;E. 1v1 and C&amp;E can be played once, then it is void for the next 2 tours. If you have questions, ask a staff about it and they will assist you. Use /poll void tier,tier as well.</li>
+</ol>
 
 <p>Remember: Voice takes time to earn, but it is rather easy to lose. We've newly updated the guidelines, and I can say that I've demoted around 10 inactive voices in the past week.</p>
 
-<p>Second, let's talk about how to be run our tours. I mean, after all, this is what we brought you here for.</p>
+<h3>
+<a id="how-to-run-tournaments" class="anchor" href="#how-to-run-tournaments" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to run tournaments?</h3>
 
 <p>So you are thinking, " Hmm, how to start a tournament and begin it at the right time, so then I can be able to do /tour remind and /tour autodq 1.5?"</p>
 
@@ -51,7 +55,8 @@
 
 <p>Third, how to bring up the poll during the tournament. !pr is the command to bring up a poll.</p>
 
-<p>When should you bring up the poll?</p>
+<h3>
+<a id="when-should-you-bring-up-the-poll" class="anchor" href="#when-should-you-bring-up-the-poll" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>When should you bring up the poll?</h3>
 
 <p>Once the tournament has begun and /tour remind and /tour autodq is put in place, that is the right time to do !pr. Also, once the tournament ends with a winner, that is also a good time to bring up the poll using !pr. Once there are 3+ votes, end the poll immediately and begin the voted tour.
 Note: It is OK to end at 2 votes depending on the case. Again, this is a judgmental thing.</p>
@@ -75,12 +80,12 @@ Note: It is OK to end at 2 votes depending on the case. Again, this is a judgmen
 
 <p>You get a random dice, which in turn leads to 2. So begin the Battle Factory tournament using /etour Battle Factory.</p>
 
-<p>VERY ESPECIALLY EXTREMELY INSANELY IMPORTANT DOCUMENTS YOU NEED TO KEEP:
-Other Metas Staff Leave Form. Fill it out when you are going on leave.-<a href="https://docs.google.com/spreadsheets/d/1j2XZx7RP2GxbkfS6xz9rm1y4pAa2VS5BvQi_fEKsL9U/edit#gid=0">https://docs.google.com/spreadsheets/d/1j2XZx7RP2GxbkfS6xz9rm1y4pAa2VS5BvQi_fEKsL9U/edit#gid=0</a>
-HOW TO RUN C&amp;E- <a href="https://docs.google.com/document/d/1PtC2QsEsyyDJCBvRCdtH2uA1YC1CFBD10nAhsXXA4vk/edit">https://docs.google.com/document/d/1PtC2QsEsyyDJCBvRCdtH2uA1YC1CFBD10nAhsXXA4vk/edit</a></p>
+<h3>
+<a id="very-especially-extremely-insanely-important-documents-you-need-to-keep" class="anchor" href="#very-especially-extremely-insanely-important-documents-you-need-to-keep" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VERY ESPECIALLY EXTREMELY INSANELY IMPORTANT DOCUMENTS YOU NEED TO KEEP:</h3>
 
-<h2>
-<a id="bot-commands-voices-can-only-do-the-ce-command--pm-the-bot-guide-to-see-its-list-of-commands" class="anchor" href="#bot-commands-voices-can-only-do-the-ce-command--pm-the-bot-guide-to-see-its-list-of-commands" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BOT COMMANDS (Voices can only do the .ce command)- PM the bot .guide to see its list of commands.</h2>
+<p>Other Metas Staff Leave Form. Fill it out when you are going on leave.-<a href="https://docs.google.com/spreadsheets/d/1j2XZx7RP2GxbkfS6xz9rm1y4pAa2VS5BvQi_fEKsL9U/edit#gid=0">https://docs.google.com/spreadsheets/d/1j2XZx7RP2GxbkfS6xz9rm1y4pAa2VS5BvQi_fEKsL9U/edit#gid=0</a>
+HOW TO RUN C&amp;E- <a href="https://docs.google.com/document/d/1PtC2QsEsyyDJCBvRCdtH2uA1YC1CFBD10nAhsXXA4vk/edit">https://docs.google.com/document/d/1PtC2QsEsyyDJCBvRCdtH2uA1YC1CFBD10nAhsXXA4vk/edit</a>
+BOT COMMANDS (Voices can only do the .ce command)- PM the bot .guide to see its list of commands.</p>
 
 <p>That's about all you should know as a voice of the Wisp Other Metas room. Be ready to read another one as a driver.. or mod..</p>
       </section>
