--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/CharizardtheFireMage/vg">View on GitHub</a>
+          <a id="forkme_banner" href="https://charizardthefiremage.github.io/">Return to Homepage</a>
 
           <h1 id="project_title">Other Metas Voice Guide</h1>
           <h2 id="project_tagline">Congratulations on being promoted to room voice! (Or you found this link and decided to read it.) So this is the guide of how to be a good voice in Other Metas.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/CharizardtheFireMage/vg/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/CharizardtheFireMage/vg/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
